[gd_scene load_steps=25 format=2]

[ext_resource path="res://src/characters/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/player.png" type="Texture" id=2]
[ext_resource path="res://src/characters/Arm.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/guns/Pistol.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/guns/Sword.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/items/Throwable.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/guns/Sniper.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/guns/Shotgun.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/guns/Rifle.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/guns/Minigun.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/guns/Shield.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/damaged_player.png" type="Texture" id=12]
[ext_resource path="res://assets/gun_fire.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/throw.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/damage.wav" type="AudioStream" id=15]

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "damaged",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 7 ), SubResource( 5 ), SubResource( 8 ) ],
"loop": true,
"name": "moving",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "stationary",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.5, 15 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.5, 16 )

[sub_resource type="Animation" id=9]
resource_name = "spin_camera"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 9, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 180.0, 0.0 ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )
Throwable = ExtResource( 6 )
Pistol = ExtResource( 4 )
Sword = ExtResource( 5 )
Sniper = ExtResource( 7 )
Shotgun = ExtResource( 8 )
Rifle = ExtResource( 9 )
Minigun = ExtResource( 10 )
Shield = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "damaged"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0 )
shape = SubResource( 2 )

[node name="ArmL" parent="." instance=ExtResource( 3 )]
position = Vector2( -6, -1 )
script = null

[node name="ArmR" parent="." instance=ExtResource( 3 )]
position = Vector2( 7, -1 )
script = null

[node name="Hand" type="Position2D" parent="ArmR"]
position = Vector2( 8, 0 )

[node name="Pistol" parent="ArmR/Hand" instance=ExtResource( 4 )]

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0.5, 0 )
shape = SubResource( 3 )

[node name="Black_Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Red_Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Flicker_Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/spin_camera = SubResource( 9 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="Node2D"]
rotating = true
current = true
smoothing_enabled = true
smoothing_speed = 3.0

[node name="Infect_Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
volume_db = 5.0
pitch_scale = 0.9

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
volume_db = 10.0

[node name="Cooldown_Timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Black_Timer" to="." method="_on_Black_Timer_timeout"]
[connection signal="timeout" from="Red_Timer" to="." method="_on_Red_Timer_timeout"]
[connection signal="timeout" from="Flicker_Timer" to="." method="_on_Flicker_Timer_timeout"]
[connection signal="timeout" from="Infect_Timer" to="." method="_on_Infect_Timer_timeout"]
[connection signal="timeout" from="Cooldown_Timer" to="." method="_on_Cooldown_Timer_timeout"]
